--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "cucumber-html-reporter": "^6.0.0",
+    "ejs": "^3.1.9",
     "fs": "^0.0.1-security",
     "pdf-parse": "^1.1.1",
     "playwright": "^1.41.2"
