--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 node_modules/
 /blob-report/
 /playwright/.cache/
-test-results/Automation_Report.html
-test-results/Report.html
-test-results/cucumber-report.json
-test-results/screenshots
+/test-results/
 
 
