--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@cucumber/cucumber": "^10.3.1",
+    "@cucumber/cucumber": "^10.4.0",
     "@playwright/test": "^1.42.1",
-    "@types/node": "^20.11.6"
-  },
-  "dependencies": {
-    "cucumber-html-reporter": "^6.0.0",
+    "@types/node": "^20.11.6",
+    "cucumber-html-reporter": "^7.1.1",
     "ejs": "^3.1.9",
     "fs": "^0.0.1-security",
     "pdf-parse": "^1.1.1",
-    "playwright": "^1.41.2"
+    "playwright": "^1.43.0"
   }
 }
